fix: hide reflexoes-img-wrapper on small screens

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -589,7 +589,8 @@
 @media (max-width: 900px) {
 
     .iconeimg,
-    .img-icone {
+    .img-icone,
+    .reflexoes-img-wrapper {
         display: none;
     }
 }
